challenge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quote-app
  namespace: staging
  annotations:
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: instance
      alb.ingress.kubernetes.io/tags: Environment=staging,Team=linkedin-learning
spec:
  ingressClassName: alb
  rules:
    - http:
        paths: 
          - path: /
            pathType: Exact
            backend:
              service:
                name: quote-app
                port:
                  number: 80
